--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -31,6 +31,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/global-chat">Global Chat</a>
+            </li>
             <% if (user) { %>
                 <li class="nav-item">
                     <a class="nav-link" href="#"> Welcome, <%= user.name %> </a>
