--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,31 +1,35 @@
 /* google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-body{
+body {
   font-size: 1.2rem;
   letter-spacing: 1px;
   background: #fafafa;
   font-family: 'Quicksand', sans-serif;
 }
-footer{
+
+footer {
   text-align: center;
   margin-top: 120px;
   color: #aaa;
 }
-.error{
+
+.error {
   color: #ff0099;
   margin: 10px 2px;
   font-size: 0.8em;
   font-weight: bold;
 }
-form{
+
+form {
   margin: 0 auto;
   padding: 30px;
-  box-shadow: 1px 2px 3px rgba(0,0,0,0.1);
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   background: white;
 }
-input:not([type='checkbox']):not([type='radio']):not([type='submit']){
+
+input:not([type='checkbox']):not([type='radio']):not([type='submit']) {
   padding: 10px 12px;
   border-radius: 4px;
   border: 1px solid #ddd;
