--- a/views/create-game-page.ejs
+++ b/views/create-game-page.ejs
@@ -1,7 +1,8 @@
 <html>
 <%- include('./partials/head'); -%>
 
-<script type="text/javascript" src="https://unpkg.com/colyseus.js@^0.14.0/dist/colyseus.js"></script>
+<script type="text/javascript"
+        src="https://unpkg.com/colyseus.js@^0.14.0/dist/colyseus.js"></script>
 <link href="./css/chessboard-1.0.0.min.css" rel="stylesheet">
 <script src="./js/chessboard-1.0.0.min.js"></script>
 <script src="./js/chess.js"></script>
@@ -22,6 +23,6 @@
 
 
 <script src="./js/createGame.js"></script>
-<script>createGame('<%=color%>', '<%=roomId%>')</script>
+<script>createGame('<%= color %>', '<%= roomId %>')</script>
 
 </html>
