--- a/views/global-chat.ejs
+++ b/views/global-chat.ejs
@@ -1,6 +1,7 @@
 <%- include('./partials/head'); -%>
 
-<script type="text/javascript" src="https://unpkg.com/colyseus.js@^0.14.0/dist/colyseus.js"></script>
+<script type="text/javascript"
+        src="https://unpkg.com/colyseus.js@^0.14.0/dist/colyseus.js"></script>
 
 <link href="./css/chat.css" rel="stylesheet">
 
@@ -21,7 +22,8 @@
                                     <input type="text" id="messageToSend" style="width: 100%;">
                                 </div>
                                 <div class="col">
-                                    <button class="btn btn-primary" style="width: 100%;">Send</button>
+                                    <button class="btn btn-primary" style="width: 100%;">Send
+                                    </button>
                                 </div>
                             </div>
                         </form>
@@ -37,6 +39,7 @@
 
 <script src="./js/globalChat.js"></script>
 <script>
-    const clientName = '<%= user ? user.name : ("Guest-" + Math.floor(Math.random() * 1000000000))%>';
-    connectToChat(clientName);
+  const clientName = '<%= user ? user.name : ("Guest-" + Math.floor(
+          Math.random() * 1000000000)) %>';
+  connectToChat(clientName);
 </script>
