--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -26,52 +26,50 @@
 
 
 <script>
-    const form = document.querySelector('form');
-    const emailError = document.querySelector('.email.error');
-    const passwordError = document.querySelector('.password.error')
+  const form = document.querySelector('form');
+  const emailError = document.querySelector('.email.error');
+  const passwordError = document.querySelector('.password.error')
 
-    form.addEventListener('submit', async (e) => {
-        e.preventDefault();
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
 
-        // reset errors
-        emailError.textContent = '';
-        passwordError.textContent = '';
+    // reset errors
+    emailError.textContent = '';
+    passwordError.textContent = '';
 
-        if (form.password.value !== form.passwordConfirm.value) {
-            passwordError.textContent = 'The two passwords are different';
-            return;
+    if (form.password.value !== form.passwordConfirm.value) {
+      passwordError.textContent = 'The two passwords are different';
+      return;
+    }
+
+    // get the values
+    const email = form.email.value;
+    const password = form.password.value;
+    const name = form.name.value;
+
+    try {
+      const response = await fetch('/sign-up', {
+        method: 'POST',
+        body: JSON.stringify({
+          email, password, name
+        }),
+        headers: {
+          'Content-Type': 'application/json'
         }
-
-
-        // get the values
-        const email = form.email.value;
-        const password = form.password.value;
-        const name = form.name.value;
-
-        try {
-            const response = await fetch('/sign-up', {
-                method: 'POST',
-                body: JSON.stringify({
-                    email, password, name
-                }),
-                headers: {
-                    'Content-Type' : 'application/json'
-                }
-            });
-            const data = await response.json();
-            console.log(data);
-            if (data.errors) {
-                emailError.textContent = data.errors.email;
-                passwordError.textContent = data.errors.password;
-            }
-            if (data.user) {
-                location.assign('/');
-            }
-        }
-        catch (err) {
-            console.log(err);
-        }
-    });
+      });
+      const data = await response.json();
+      console.log(data);
+      if (data.errors) {
+        emailError.textContent = data.errors.email;
+        passwordError.textContent = data.errors.password;
+      }
+      if (data.user) {
+        location.assign('/');
+      }
+    } catch (err) {
+      console.log(err);
+    }
+  });
 
 </script>
 
