added game spectating

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <form action="/create-game" class="text-center m-5" method="post">
+            <form action="/game/create" class="text-center m-5">
                 <h1 class="text-uppercase ">create a new game</h1>
                 <p class="m-5">
                     <label> Choose color to play: </label>
@@ -18,7 +18,7 @@
             </form>
         </div>
         <div class="col">
-            <form action="/join-game" class="text-center m-5" method="post">
+            <form action="/game/join" class="text-center m-5">
                 <h1 class="text-uppercase">Join a game</h1>
                 <p class="m-2">
                     <label> Enter game id: </label>
