--- a/views/game-page.ejs
+++ b/views/game-page.ejs
@@ -3,9 +3,9 @@
 
 <script type="text/javascript"
         src="https://unpkg.com/colyseus.js@^0.14.0/dist/colyseus.js"></script>
-<link href="./css/chessboard-1.0.0.min.css" rel="stylesheet">
-<script src="./js/chessboard-1.0.0.min.js"></script>
-<script src="./js/chess.js"></script>
+<link href="/css/chessboard-1.0.0.min.css" rel="stylesheet">
+<script src="/js/chessboard-1.0.0.min.js"></script>
+<script src="/js/chess.js"></script>
 
 <body>
 
@@ -22,7 +22,8 @@
 </body>
 
 
-<script src="./js/createGame.js"></script>
-<script>createGame('<%= color %>', '<%= roomId %>')</script>
+<script src="/js/gamePage.js"></script>
+<script>gamePage('<%= color %>',
+      '<%= roomId %>', <%= isSpectator %>)</script>
 
 </html>
