--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -18,7 +18,7 @@
 
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <title>Susuu Chess</title>
 </head>
