--- a/views/game-page.ejs
+++ b/views/game-page.ejs
@@ -9,15 +9,22 @@
 
 <body>
 
-<div class="container">
-    <div id="myBoard" style="width: 700px"></div>
-    <label>Status:</label>
-    <div id="status"></div>
-    <label>FEN:</label>
-    <div id="fen"></div>
-    <label>PGN:</label>
-    <div id="pgn"></div>
-</div>
+
+
+    <div class="gameHolder">
+        <div class="roomIdHolder">
+            Room ID:
+            <div id="gameId"></div>
+        </div>
+        <div class="gameBody">
+            <div class="gameHeader">
+                <h3 id="joinerStatus">Your playing as White</h3>
+            </div>
+            <div id="myBoard" style="width: 700px"></div>
+        </div>
+    </div>
+
+
 
 </body>
 
